--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <a href="/anuncie"><img src="./assets/img/svg-social/star.svg" alt=""> anuncie</a>
             <a href="/expediente"><img src="./assets/img/svg-social/comment-article.svg" alt=""> expediente</a>
 
-            <a href="/fale conosco"><img src="./assets/img/svg-social/comment.svg" alt="">fale conosco</a>
+            <a href="/fale conosco"><img src="./assets/img/svg-social/comment-article.svg" alt="">fale conosco</a>
 
 
           </div>
@@ -244,11 +244,11 @@
 
 
           <div class="article-publish">
-            <div class="article.autores" style="margin-top: 10px;margin-left:10px;">
+            <div class="article.autores" style="margin-top: 10px;">
               <span>Escrito por <strong class="article-autor">da Redação</strong></span>
             </div>
             <div class="article-publish-date">
-              <span class="article.InicialPublishDate" style="margin-left: 10px;">Publicado em 21.03.2023, 18:27:28</span><span class="article.publishdate"> Editado em 21.03.2023, 18:30</span>
+              <span class="article.InicialPublishDate">Publicado em 21.03.2023, 18:27:28</span><span class="article.publishdate"> Editado em 21.03.2023, 18:30</span>
             </div>
           </div>
         </div>
@@ -256,12 +256,11 @@
         <div class="google-news">
           <a href="Siga o TN"><img src="./assets/img/svg-colored/google-news.svg" alt=""> Siga o TNOnline no Google News</a>
         </div>
-
-        <div class="anuncie">
-
-          <span class="span-1">Associe sua marca ao jornalismo sério e de credibilidade,<a href="anuncie">anuncie no TNOnline</a></span>
+        <div class="anuncie-border">
+          <div class="anuncie">
+            <span class="span-1">Associe sua marca ao jornalismo sério e de credibilidade,<a href="anuncie">anuncie no TNOnline</a></span>
+          </div>
         </div>
-
 
         <div class="article-paragraphs">
           <p>Informe Epidemiológico divulgado nesta terça-feira (21), pela Secretaria de Estado da Saúde (Sesa) mostra que Bom Sucesso e São Pedro do Ivaí, no norte do Paraná, enfrentam epidemia de dengue. Os dois municípios são vizinhos e pertencem à 16ª Regional de Saúde (RS) que soma um total de 201 casos da doença. O período epidemiológico, que teve início em agosto do ano passado, soma agora 8.723 casos e oito óbitos confirmados no Estado.</p>
@@ -299,8 +298,153 @@
               <a href="são pedro do ivai">#são pedro do ivai</a>
             </div>
           </div>
+          <div class="categorias-procure">
+            <a href="#">Encontrou algum erro? Avise a redação!</a>
+          </div>
+        </div>
+
+
+        <div class="categorias-social">
+          <h4>Gostou dessa matéria? Compartilhe!</h4>
+
+          <a href="facebook" class="social-categories"><img src="./assets/img/svg grey/facebook-grey.svg" alt="social-categories"></a>
+          <a href="facebook" class="social-categories"><img src="./assets/img/svg grey/whatsappgrey.svg" alt="facebook"></a>
+          <a href="facebook" class="social-categories"><img src="./assets/img/svg grey/linkedingrey.svg" alt="facebook"></a>
+          <a href="facebook" class="social-categories"><img src="./assets/img/svg grey/twittergrey.svg" alt="facebook"></a>
+          <form action="#">
+            <input type="email" name="email" aria-label="email" required="" class="cat-socialinput" placeholder="Digite aqui seu e-mail e receba notícias!">
+          </form>
+          <div class="cat-meuemail">
+            <button>enviar</button>
+          </div>
 
         </div>
+        <div class="mais-materias"">
+          <h2>Mais matérias de Apucarana</h2>
+        </div>
+        <div class=" uol-tmtitle">
+          <h2>recomendados para você</h2>
+        </div>
+        <div class="meus-comentarios">
+          <h4>Deixe seu comentário sobre: "<span>Câmera registra sequência de tiros no Jardim Colonial em Apucarana</span>"</h4>
+        </div>
+
+        <small>O portal TNOnline.com.br não se responsabiliza pelos comentários, opiniões, depoimentos, mensagens ou qualquer outro tipo de conteúdo. Seu comentário passará por um filtro de moderação. O portal TNOnline.com.br não se obriga a publicar caso não esteja de acordo com a política de privacidade do site. Leia aqui o termo de uso e responsabilidade.</small>
+
+        <div class="button-comentarios">
+          <button><img src="./assets/img/svgwhite/2commentswhite.svg" alt=""> ver comentários</button>
+        </div>
+
+        <DIV class="trib-play">
+          <H4>tribuna play</H4>
+        </DIV>
+
+        <div class="trib-content">
+          <div>
+            <iframe class="" title="GCM de Apucarana recupera três carros furtados" allow="autoplay" width="350px" height="215px" scrolling="no" frameborder="0" allowtransparency="" src="https://www.dailymotion.com/embed/video/x8jf671"></iframe>
+          </div>
+          <div class="trib-content-text"><a aria-label="GCM de Apucarana recupera três carros furtados" href="/noticias/tribunaplay/gcm-de-apucarana-recupera-tres-carros-furtados-741452">
+              <figure class=""><img src="./" alt="GCM de Apucarana recupera três carros furtados" pinger-seen="true"></figure>
+              <h3 class="">GCM de Apucarana recupera três carros furtados</h3>
+            </a></div>
+        </div>
+
+        <DIV class="trib-play-noticias">
+          <H4>mais notícias</H4>
+        </DIV>
+        <div class="trib-content-1">
+          <div>
+            <figure class="">
+              <img src="./assets/img/mais-noticias/Mais-de-12-mil-raquetes-foram-distribuidas-na-cida-00741453-0-202303241539.webp" alt="">
+            </figure>
+          </div>
+          <div class=" trib-social">
+            <div class="trib-social-a">
+              <a class="trib-subtitle" href="mais de 12 mil raquetes foram distribuidas">medida</a>
+              <a href="facebook"><img src="./assets/img/svg grey/facebook-grey.svg" alt=""></a>
+              <a href="whatsapp"><img src="./assets/img/svg grey/whatsappgrey.svg" alt=""></a>
+              <a href=""><i>...</i></a>
+
+            </div>
+            <h2>Foz do Iguaçu distribui raquetes 'mata mosquito' para combate à dengue</h2>
+            </a>
+
+          </div>
+          </a>
+        </div>
+
+
+        <div class="trib-content-1">
+          <div>
+            <figure class="">
+              <img src="./assets/img/mais-noticias/Servidores-sao-capacitados-para-implantacao-de-lei-00741447-0-202303241529.webp" alt="Servidores-sao-capacitados-para-implantacao-de-lei-00741447-0-202303241529">
+            </figure>
+          </div>
+          <div class=" trib-social">
+            <div class="trib-social-a">
+              <a class="trib-subtitle-1" href="mais de 12 mil raquetes foram distribuidas">apucarana</a>
+              <a href="facebook"><img src="./assets/img/svg grey/facebook-grey.svg" alt=""></a>
+              <a href="whatsapp"><img src="./assets/img/svg grey/whatsappgrey.svg" alt=""></a>
+              <a href=""><i>...</i></a>
+
+            </div>
+            <h2>Servidores são capacitados para implantação de lei de licitação</h2>
+            </a>
+
+          </div>
+          </a>
+        </div>
+
+        <div class="trib-content-1">
+          <div>
+            <figure class="">
+              <img src="./assets/img/mais-noticias/Morador-registra-luz-misteriosa-no-ceu-de-Novo-Ita-00741436-0-202303241449.webp" alt="Morador-registra-luz-misteriosa-no-ceu-de-Novo-Ita">
+            </figure>
+          </div>
+          <div class=" trib-social">
+            <div class="trib-social-a">
+              <a class="trib-subtitle-2" href="mais de 12 mil raquetes foram distribuidas">vale do ivaí</a>
+              <a href="facebook"><img src="./assets/img/svg grey/facebook-grey.svg" alt=""></a>
+              <a href="whatsapp"><img src="./assets/img/svg grey/whatsappgrey.svg" alt=""></a>
+              <a href=""><i>...</i></a>
+
+            </div>
+            <h2>Morador registra luz misteriosa no céu de Novo Itacolomi</h2>
+            </a>
+
+          </div>
+          </a>
+        </div>
+        <div class="trib-content-1">
+          <div>
+            <figure class="">
+              <img src="./assets/img/mais-noticias/O-veiculo-foi-encontrado-em-Ortigueira-00741432-0-202303241436.webp" alt="O-veiculo-foi-encontrado-em-Ortigueira">
+            </figure>
+          </div>
+          <div class=" trib-social">
+            <div class="trib-social-a">
+              <a class="trib-subtitle-2" href="mais de 12 mil raquetes foram distribuidas">vale do ivaí</a>
+              <a href="facebook"><img src="./assets/img/svg grey/facebook-grey.svg" alt=""></a>
+              <a href="whatsapp"><img src="./assets/img/svg grey/whatsappgrey.svg" alt=""></a>
+              <a href=""><i>...</i></a>
+
+            </div>
+            <h2>Caminhão roubado em Faxinal é encontrado após investigação da PC</h2>
+            </a>
+          </div>
+
+        </div>
+
+        <div class="button-noticias">
+          <a href=""><button>mais notícias</button></a>
+        </div>
+
+
+      </div>
+
+
+
+
       </div>
       </div>
 
@@ -315,7 +459,7 @@
 
   <footer>
 
-    <div class="tno-footer">
+    <div class=" tno-footer">
       <div class="wrapper">
         <h2>SIGA O TN NAS REDES SOCIAIS</h2>
         <div class="footer-social">
