max-width 1200px

--- a/index.html
+++ b/index.html
@@ -440,6 +440,12 @@
         </div>
 
 
+        <!-- <aside><h2>
+  Outras notícias de Apucarana
+</h2>
+<div></div>
+</aside> -->
+
       </div>
       </div>
       </div>
