outras noticias mob

--- a/index.html
+++ b/index.html
@@ -440,11 +440,31 @@
         </div>
 
 
-        <!-- <aside><h2>
-  Outras notícias de Apucarana
-</h2>
-<div></div>
-</aside> -->
+        <aside class="aside-mobile">
+          <h2>
+            Outras notícias de Apucarana
+          </h2>
+          <div>
+            <a href=""><img src="./assets/img/svg-colored/angle-right-solid.svg" alt="">
+              <h3>Conferência Municipal de Saúde aprova 148 propostas</h3>
+            </a>
+            <a href=""><img src="./assets/img/svg-colored/angle-right-solid.svg" alt="">
+              <h3>Partidas de futsal abrem fase municipal dos 69º JEP's em Apucarana</h3>
+            </a>
+            <a href=""><img src="./assets/img/svg-colored/angle-right-solid.svg" alt="">
+              <h3>Jovem tem celular roubado em Apucarana</h3>
+            </a>
+            <a href=""><img src="./assets/img/svg-colored/angle-right-solid.svg" alt="">
+              <h3>Mais um Corsa é furtado em Apucarana; crime aconteceu nesta terça</h3>
+            </a>
+            <a href=""><img src="./assets/img/svg-colored/angle-right-solid.svg" alt="">
+              <h3>Idosos são vacinados contra a gripe em Apucarana; veja</h3>
+            </a>
+            <a href=""><img src="./assets/img/svg-colored/angle-right-solid.svg" alt="">
+              <h3>Copel retira mais de 800 quilos de fiação de postes em Apucarana</h3>
+            </a>
+          </div>
+        </aside>
 
       </div>
       </div>
