responsivo add últimas noticias

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
               <a href="aedes aegypti">#aedes aegypti</a>
               <a href="bom sucesso">#bom sucesso</a>
               <a href="dengue">#dengue</a>
-              <a href="são pedro do ivai">#são pedro do ivai</a>
+              <a href="são pedro do ivai">#Arapuana</a>
             </div>
           </div>
           <div class="categorias-procure">
@@ -466,6 +466,67 @@
           </div>
         </aside>
 
+        <aside class="widget-last">
+
+          <h2>Últimas Notícias</h2>
+          <div><a href="https://tnonline.uol.com.br/noticias/apucarana/morre-homem-agredido-por-dois-jovens-em-apucarana-742677"><img src="./assets/img/acapurana/Flavio-Aparecido-Cipriano-de-41-anos-00742677-0-202303291205.webp" alt=""></a>
+            <span class="widget-cat">flagrante</span>
+            <button><img src="./assets/img/svgwhite/share-nodes-solid (1).svg" alt=""></button>
+          </div>
+        </aside>
+        <div class="widget-title-content">
+          <div class="widget-title">
+            <h3> Aluno de 16 anos saca revólver em escola de Arapongas; saiba mais</h3>
+          </div>
+          <span class="time-span">Há 37 minutos</span>
+          <span class="locale">Em Arapongas</span>
+        </div>
+        <section class="compact-widget-margin">
+          <article class="compact-widget">
+            <div class="compact-wrap"><a href="https://tnonline.uol.com.br/noticias/arapongas/aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais-742755"><img class="compact-foto" src="./assets/img/acapurana/min-widget-1 - TNOnline.htmll.webp" alt="aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais"></a>
+              <div>
+                <span>violência escolar</span>
+                <button><a href="https://tnonline.uol.com.br/noticias/arapongas/aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais-742755""><img src=" ./assets/img/svg grey/share-nodes-solid grey(1).svg" alt=""></a></button>
+                <h2>Aluno de 16 anos saca revólver em escola de Arapongas; saiba mais</h2>
+              </div>
+            </div>
+            <span class="time-span">Há 37 minutos</span>
+            <span class="locale">Em Arapongas</span>
+          </article>
+          <article class="compact-widget">
+            <div class="compact-wrap"><a href="https://tnonline.uol.com.br/noticias/arapongas/aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais-742755"><img class="compact-foto" src="./assets/img/acapurana/min-widget-2 - TNOnline.html.webp" alt="aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais"></a>
+              <div>
+                <span>Surpresa</span>
+                <button><a href="https://tnonline.uol.com.br/noticias/arapongas/aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais-742755""><img src=" ./assets/img/svg grey/share-nodes-solid grey(1).svg" alt=""></a></button>
+                <h2>Borrazópolis é eleita 'Capital Nacional do Chocolate'; entenda</h2>
+              </div>
+            </div>
+            <span class="time-span">Há 37 minutos</span>
+            <span class="locale">Em Arapongas</span>
+          </article>
+          <article class="compact-widget">
+            <div class="compact-wrap"><a href="https://tnonline.uol.com.br/noticias/arapongas/aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais-742755"><img class="compact-foto" src="./assets/img/acapurana/min-widget-3- TNOnline.html.webp" alt="aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais"></a>
+              <div>
+                <span>PARANÁ</span>
+                <button><a href="https://tnonline.uol.com.br/noticias/arapongas/aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais-742755""><img src=" ./assets/img/svg grey/share-nodes-solid grey(1).svg" alt=""></a></button>
+                <h2>Homem fica em estado grave após ter 30% do corpo queimado em incêndio</h2>
+              </div>
+            </div>
+            <span class="time-span">Há 37 minutos</span>
+            <span class="locale">Em Arapongas</span>
+          </article>
+          <article class="compact-widget">
+            <div class="compact-wrap"><a href="https://tnonline.uol.com.br/noticias/arapongas/aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais-742755"><img class="compact-foto" src="./assets/img/acapurana/min-widget-3- TNOnline.html.webp" alt="aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais"></a>
+              <div>
+                <span>Norte do Estado</span>
+                <button><a href="https://tnonline.uol.com.br/noticias/arapongas/aluno-de-16-anos-saca-revolver-em-escola-de-arapongas-saiba-mais-742755""><img src=" ./assets/img/svg grey/share-nodes-solid grey(1).svg" alt=""></a></button>
+                <h2>PR: ação da polícia resulta na apreensão de cigarros contrabandeados</h2>
+              </div>
+            </div>
+            <span class="time-span">Há 37 minutos</span>
+            <span class="locale">Em Arapongas</span>
+          </article>
+        </section>
       </div>
       </div>
       </div>
