--- a/index.html
+++ b/index.html
@@ -466,6 +466,30 @@
           </div>
         </aside>
 
+
+        <!-- <aside class="carousel-card">
+          <ul class="cards-compact">
+            <li><a href="https://www.tribunadonorte.com/digital">
+                <i><img src="./assets/img/svgwhite/newspaper.svg" alt=""></i>
+                <span class="card-title">Edição Digital</span>
+                <span class="card-description">Clique e confira</span>
+              </a>
+              <img src="./assets/img/acapurana/Edicao-do-dia-15-de-marco-de-2023-00738467-0-202303142140-xs.webp" alt="">
+            </li>
+            <li><a href="https://www.tribunadonorte.com/digital">
+                <i><img src="./assets/img/svgwhite/newspaper.svg" alt=""></i>
+                <span class="card-title">Edição Digital</span>
+                <span class="card-description">Clique e confira</span>
+              </a>
+
+            </li>
+          </ul>
+        </aside> -->
+
+
+
+
+
         <aside class="widget-last">
 
           <h2>Últimas Notícias</h2>
